Checkers for slug existance
