# static/openapi/schema.yaml
@@ -167,6 +167,26 @@ paths:
           description: ''
       tags:
       - Organizations
+  /api/exists/organizations/{slug}/:
+    get:
+      operationId: retrieveProductOrganizationPreview
+      description: Checks if organization with specified slug exists
+      parameters:
+      - name: slug
+        in: path
+        required: true
+        description: ''
+        schema:
+          type: string
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductOrganizationPreview'
+          description: ''
+      tags:
+      - Organizations
   /api/private/organizations/:
     get:
       operationId: listPrivateOrganizations
@@ -507,6 +527,32 @@ paths:
           description: ''
       tags:
       - api
+  /api/exists/organizations/{org_slug}/products/{slug}/:
+    get:
+      operationId: retrieveProductPreview
+      description: Checks if product with specified slug exists
+      parameters:
+      - name: org_slug
+        in: path
+        required: true
+        description: ''
+        schema:
+          type: string
+      - name: slug
+        in: path
+        required: true
+        description: ''
+        schema:
+          type: string
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductPreview'
+          description: ''
+      tags:
+      - Products
   /api/organizations/{org_slug}/products/{product_slug}/online-stores/:
     get:
       operationId: listOnlineStores
@@ -949,6 +995,19 @@ components:
             -\uFFFF0-9])?(?:\\.(?!-)[a-z\xA1-\uFFFF0-9-]{1,63}(?<!-))*\\.(?!-)(?:[a-z\xA1\
             -\uFFFF-]{2,63}|xn--[a-z0-9]{1,59})(?<!-)\\.?|localhost))(?::\\d{1,5})?(?:[/?#][^\\\
             s]*)?\\z"
+      required:
+      - slug
+    ProductOrganizationPreview:
+      type: object
+      properties:
+        name:
+          type: string
+          nullable: true
+          maxLength: 255
+        slug:
+          type: string
+          maxLength: 255
+          pattern: ^[-a-zA-Z0-9_]+$
       required:
       - slug
     PrivateOrganization:
